--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@
             cursor: pointer;
             font-family: 'Lobster', cursive;
         }
+.input-box button.logout-btn {
+            background-color: #ff7043;  /* Logout button color */
+        }
+
+        .input-box button.logout-btn:hover {
+            background-color: #e64a19;  /* Logout button hover color */
+        }
+
 
         .admin-tools {
             display: none;
@@ -274,7 +282,7 @@
                         document.querySelector('.admin-tools').style.display = 'flex';
                         currentChat = 'Keerthi'; 
                     } else {
-                        alert(`Welcome ${user}! NICE TO SEE YOU.`);
+                        alert(`Welcome ${user}!`);
                     }
                     document.querySelector('.access-form').style.display = 'none';
                     document.getElementById('chatBox').style.display = 'block';
@@ -429,21 +437,15 @@
                 alert(`Access code for ${friend} has been updated.`);
             }
         }
-         // Back button handling
-         window.onpopstate = function(event) {
-            if (document.getElementById('chatBox').style.display === 'block') {
-                // If currently in chat, go back to friend list
-                document.getElementById('chatBox').style.display = 'none';
-                document.getElementById('inputBox').style.display = 'none';
-                document.getElementById('friendList').style.display = 'flex';
-            } else if (document.querySelector('.access-form').style.display === 'none') {
-                // If logged in but not in chat, go back to access form
-                document.querySelector('.access-form').style.display = 'block';
-                document.getElementById('friendList').style.display = 'none';
-                document.getElementById('chatBox').style.display = 'none';
-                document.getElementById('inputBox').style.display = 'none';
-            }
-        };
+
+function logout() {
+            currentUser = '';
+            document.querySelector('.access-form').style.display = 'flex';
+            document.getElementById('friendList').style.display = 'none';
+            document.getElementById('chatBox').style.display = 'none';
+            document.getElementById('inputBox').style.display = 'none';
+            document.querySelector('.admin-tools').style.display = 'none';
+        }
 
     </script>
 </head>
@@ -485,10 +487,11 @@
     </div>
 
     <div class="input-box" id="inputBox" style="display: none;">
-        <input type="file" id="fileInput" accept="image/*,video/*,audio/*" onchange="handleFileUpload(event)">
+        <input type="file" id="fileInput" accept="image/*,video/*" onchange="handleFileUpload(event)">
         <label for="fileInput">📎</label>
         <input type="text" id="messageInput" placeholder="Type your message...">
         <button onclick="sendMessage()">Send</button>
+ <button class="logout-btn" onclick="logout()">Logout</button>  <!-- Logout Button -->
     </div>
 
     <div class="admin-tools" style="display: none;">
